arm64/dts: devonn: Add node for 2nd tp single tap function
Update dtsi file.
Add single tap node of 2nd tp ft8726.

Change-Id: Ia57dc2383c43f679ef268dbc995048477a2f19d7
Signed-off-by: huangxinglue <wingte77@motorola.com>
Reviewed-on: https://gerrit.mot.com/2325925
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jun Weng <wengjun1@motorola.com>
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-touch.dtsi
@@ -35,6 +35,7 @@
 	focaltech,irq-gpio = <&pio 22 0x0>;
 	focaltech,max-touch-number = <10>;
         focaltech,display-coords = <0 0 1080 2400>;
+	focaltech,report_gesture_key = <59>;
 	};
 };
 
