--- a/arch/arm64/boot/dts/mediatek/mt6855-moto-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-moto-common-overlay.dtsi
@@ -79,41 +79,41 @@
 			0x4004  0x78
 			0x4008  0x8
 			0x8020  0x32
-			0x8028  0x85E 		/*AFE_PARAM_PH0*/
-			0x8034  0x85E 		/*AFE_PARAM_PH1*/
-			0x8040  0x85E 		/*AFE_PARAM_PH2*/
-			0x804C  0x85E 		/*AFE_PARAM_PH3*/
-			0x8058  0x85E 		/*AFE_PARAM_PH4*/
-			0x8064  0x85E 		/*AFE_PARAM_PH5*/
-			0x8070  0x85E 		/*AFE_PARAM_PH6*/
+			0x8028  0x857 		/*AFE_PARAM_PH0*/
+			0x8034  0x856 		/*AFE_PARAM_PH1*/
+			0x8040  0x857 		/*AFE_PARAM_PH2*/
+			0x804C  0x856 		/*AFE_PARAM_PH3*/
+			0x8058  0x856 		/*AFE_PARAM_PH4*/
+			0x8064  0x856 		/*AFE_PARAM_PH5*/
+			0x8070  0x856 		/*AFE_PARAM_PH6*/
 			0x807C  0x85E  		/*AFE_PARAM_PH7*/
 			/*set CS3 to hiz, because it used as IRQ pin*/
-			0x8030  0xFFF9FD 	/*REG_AFEPH_PH0, CS0, ANT1, Bottom center*/
-			0x803C  0xF7F9FF 	/*REG_AFEPH_PH1, CS5, ANT2, Top Right*/
-			0x8048  0xBFF9FF 	/*REG_AFEPH_PH2, CS4, ANT7, Bottom Right*/
-			0x8054  0xFEF9FF 	/*REG_AFEPH_PH3, CS6, ANT3/5/10, Top Left*/
-			0x8060  0xFFD9FF 	/*REG_AFEPH_PH4, CS7, ANT4/6/9, Right*/
-			0x806C  0xFFF9EF 	/*REG_AFEPH_PH5, CS1, ANT1_REF, Bottom_Ref*/
-			0x8078  0xFFF97F 	/*REG_AFEPH_PH6, CS2, ANT9 REF, Right*/
+			0x8030  0xFFF9FD 	/*REG_AFEPH_PH0, CS0, ANT0, Bottom center*/
+			0x803C  0xFFD9FF 	/*REG_AFEPH_PH1, CS4, ANT8, Top Left*/
+			0x8048  0xF7F9FF 	/*REG_AFEPH_PH2, CS6, ANT1, Bottom Right*/
+			0x8054  0xBFF9FF 	/*REG_AFEPH_PH3, CS7, ANT4, Top Right*/
+			0x8060  0xFEF9FF 	/*REG_AFEPH_PH4, CS5, ANT5, Right*/
+			0x806C  0xFFF9EF 	/*REG_AFEPH_PH5, CS1, ANT REF */
+			0x8078  0xFFF97F 	/*REG_AFEPH_PH6, CS2, ANT REF */
 			0x8084  0xFFFFFF 	/*REG_AFEPH_PH7, NOT USE*/
-			0x8098  0x8440
-			0x80B8  0x372D
-			0x80D8  0x5A31
-			0x80F8  0x8348
-			0x8118  0x372D
+			0x8098  0x4831
+			0x80B8  0x2D26
+			0x80D8  0x6140
+			0x80F8  0x3232
+			0x8118  0x3C28
 			0x8138  0xC8
 			0x8158  0xC8
 			0x8178  0xC8
-			0x80A0  0x202000E1
-			0x80C0  0x252500E1
+			0x80A0  0x262600E1
+			0x80C0  0x202000E1
 			0x80E0  0x202000E0
-			0x8100  0x141400E2
-			0x8120  0x1F1F00E2
+			0x8100  0x1E1E00E2
+			0x8120  0x272700E2
 			0x8140  0x0
 			0x8160  0x0
 			0x8180  0x0
-			0x8188  0x15
-			0x818C  0x16
+			0x8188  0x8000015
+			0x818C  0x8000016
 			0x8190  0x0
 			0x8194  0x0
 			0x8090  0x1EE57000
@@ -122,7 +122,7 @@
 			0x80F0  0x22E57000
 			0x8110  0x18EA7000
 			0x8130  0x2AD67000
-			0x8150  0x2AD66000
+			0x8150  0x2AD67000
 			0x8170  0x2AD66000
 			0x8088  0x300000
 			0x80A8  0x300000
