--- a/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
@@ -44,6 +44,8 @@
 	mmi,enable-charging-limit;
 	mmi,upper-limit-capacity = <65>;
 	mmi,lower-limit-capacity = <60>;
+	mmi,mmi-cycle-cv-steps =<100 20>,
+			<200 40>;
 };
 
 &mt6375_typec {
