Add the thermal ntc
add pa_therm0/chg_ntc/mtksflashlight/nwchg_therm node
add the thermal ntc config

Change-Id: I6b7d0b01c0c62aa05def3fc6dd9e4ef3ab72b080
Reviewed-on: https://gerrit.mot.com/2332035
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Yongbin Chen <chenyb1@motorola.com>
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
@@ -1612,5 +1612,12 @@
 			polling-delay-passive = <0>; /* milliseconds */
 			thermal-sensors = <&tboard_thermistor7>;
 		};
+		ltepa_ntc {
+			polling-delay = <0>; /* milliseconds */
+			polling-delay-passive = <0>; /* milliseconds */
+			thermal-sensors = <&tboard_thermistor2>;
+			status = "disabled";
+		};
+
 		/* -EKDEVONN-16, madongyu.wt, modify, 20220620, add the NTC devices connect to board-temp.c */
 };
