--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -874,6 +874,15 @@ config DRM_PANEL_MOT_DUMMY_VDO_60HZ
 	  Say Y here if you want to enable support for DRM_PANEL_MOT_DUMMY_VDO_60HZ
 	  panel. It provides a MIPI DSI interface to host.
 
+config DRM_PANEL_TIANMA_NT36672C_649_FHDP_DPHY_VDO_120HZ
+	tristate "TIANMA 1080*2400 120 HZ VDO nt36672c panel"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  Say Y here if you want to enable support for TIANMA_NT36672C_649_FHDP_DPHY_VDO_120HZ
+	  panel. It provides a MIPI DSI interface to host.
+
 config DRM_PANEL_TIANMA_ICNL9922_649_FHDP_DPHY_VDO_120HZ
 	tristate "TIANMA 1080*2400 120 HZ VDO icnl9922 panel"
 	depends on OF
