--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
@@ -41,9 +41,10 @@
 # CONFIG_DRM_PANEL_CSOT_NT37701A_655_FHDP_DPHY_CMD_144HZ is not set
 # CONFIG_DRM_PANEL_K6895V1_64_95T_ALPHA_CMD is not set
 # CONFIG_DRM_PANEL_TIANMA_NT36672C_CPHY_VDO_90HZ_RT4801 is not set
+# CONFIG_DRM_PANEL_TIANMA_ICNL9922_649_FHDP_DPHY_VDO_120HZ is not set
+# CONFIG_DRM_PANEL_TONGXINGDA_FT8726_FHDP_DPHY_VDO_120HZ is not set
 
-CONFIG_DRM_PANEL_TIANMA_ICNL9922_649_FHDP_DPHY_VDO_120HZ=m
-CONFIG_DRM_PANEL_TONGXINGDA_FT8726_FHDP_DPHY_VDO_120HZ=m
+CONFIG_DRM_PANEL_TIANMA_NT36672C_649_FHDP_DPHY_VDO_120HZ=m
 CONFIG_DRM_PANEL_MOT_DUMMY_VDO_60HZ=m
 CONFIG_OF_GPIO=y
 #enable zram writeback
