drivers/ccci: Support the modem CID secure authentication
Performing the secure authentication in Modem against the dangerous AT/Meta
commands are critical. Previously we used the approach to securely protect the
modem boot mode via the MTK special register(secure write only in ATF),
but here on mt6855, the register cannot be provided though.
Thus we would have to seek the alternative solution to maintain the signed
Motorola data for the auth. The idea is to use the shared memory carved out from
the LK and pass it over to modem for the ephemeral data management.

Change-Id: I2eecff3ff06c0e5f9d344ea64fb30175a496d7ad
Reviewed-on: https://gerrit.mot.com/2337515
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Binsheng Que <quebs2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510.config
@@ -20,5 +20,8 @@ CONFIG_FSCRYPT_WRAPED_KEY_MODE_SUPPORT=y
 # Enable DRDI feature
 CONFIG_MOTO_DRDI_SUPPORT=y
 
+# Enable MOTO SECURITY CCCI DATA feature
+CONFIG_MOTO_CCCI_SEC_SUPPORT=y
+
 # Set modem to Lf/Lt/W/G mode
 CONFIG_MTK_MD1_SUPPORT=9
