--- a/arch/arm64/configs/ext_config/debug-mgk_64_k510-tesla.config
+++ b/arch/arm64/configs/ext_config/debug-mgk_64_k510-tesla.config
@@ -20,3 +20,4 @@ CONFIG_MTK_ENABLE_GENIEZONE=m
 CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
 CONFIG_MTK_TEE_GP_SUPPORT=y
 CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
+CONFIG_MOTO_BYPSS_RF_CABLE_DETECT=y
