--- a/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
@@ -208,16 +208,16 @@
 		reset-gpio = <&pio 12 0>;
 		aw8622x_vib_lk_f0_cali = < 0 >;
 		aw8622x_vib_mode = < 2 >; /* mode: RAM -> 2; CONT -> 3 */
-		aw8622x_vib_f0_pre = < 2350 >;
+		aw8622x_vib_f0_pre = < 2050 >;
 		aw8622x_vib_f0_cali_percen = < 7 >;
 		aw8622x_vib_cont_drv1_lvl = < 0x7F >;
-		aw8622x_vib_lra_vrms = < 1000 >; /* Motor rated voltage, mV */
-		aw8622x_vib_cont_brk_time = < 0x06 >;
+		aw8622x_vib_lra_vrms = < 1800 >; /* Motor rated voltage, mV */
+		aw8622x_vib_cont_brk_time = < 0x08 >;
 		aw8622x_vib_cont_tset = < 0x06 >;
 		aw8622x_vib_cont_bemf_set = < 0x02 >;
 		aw8622x_vib_cont_wait_num = < 0x06 >;
-		aw8622x_vib_cont_brk_gain = < 0x08 >;
-		aw8622x_vib_cont_drv1_time = < 0x04 >;
+		aw8622x_vib_cont_brk_gain = < 0x0A >;
+		aw8622x_vib_cont_drv1_time = < 0x08 >;
 		aw8622x_vib_cont_drv2_time = < 0x14 >;
 		aw8622x_vib_cont_track_margin = < 0x0F >;
 		aw8622x_vib_sine_array = < 0x05 0xB2 0xFF 0xEF >; /* SIN_H SIN_L COS_H COS_L */
