arm64/dts: config devonf audio pa
changes:
devonf use 2 aw87390 pa.

Change-Id: I361fcf0331b26df1c5804a68386e4d51326561fc
Signed-off-by: guoyf2 <guoyf2@mt.com>
Reviewed-on: https://gerrit.mot.com/2341896
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Yunfei Guo <guoyf2@motorola.com>
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
@@ -15,6 +15,7 @@
 #include "mediatek/devonf-display.dtsi"
 #include "mediatek/devonf-charger.dtsi"
 #include "mediatek/mt6855_devonf_camera_overlay.dtsi"
+#include "mediatek/devonf-audio.dtsi"
 
 &dispsys_config {
 	pinctrl-names =
@@ -252,37 +253,10 @@
 //#include "mediatek/cust_mt6855_touch_1080x2400.dtsi"
 #include "mediatek/cust_mt6855_camera_v4l2.dtsi"
 
-
-&i2c9 {
-	status = "okay";
-	aw883xx_smartpa_0: aw883xx@34 {
-                compatible = "awinic,aw883xx_smartpa";
-                #sound-dai-cells = <0>;
-                reg = <0x34>;
-                reset-gpio = <&pio 162 0>;
-                sound-channel = <0>;
-                re-min = <1000>;
-                re-max = <40000>;
-		rename-flag=<1>;
-                status = "okay";
-        };
-        aw883xx_smartpa_1: aw883xx@36 {
-                compatible = "awinic,aw883xx_smartpa";
-                #sound-dai-cells = <0>;
-                reg = <0x36>;
-                reset-gpio = <&pio 182 0>;
-                sound-channel = <1>;
-                re-min = <1000>;
-                re-max = <40000>;
-		rename-flag=<1>;
-                status = "okay";
-        };
-};
-
 &sound {
 	mediatek,spk-i2s = <3 0>;
 	mediatek,speaker-codec {
-		sound-dai = <&aw883xx_smartpa_0 &aw883xx_smartpa_1>;
+		sound-dai = <&spk>;
 	};
 };
 
