arm64/config: config devonf audio pa
changes:
define CONFIG_SND_SOC_AW87XXX and
CONFIG_SND_SOC_AW87XXX_KERNEL for aw87390.

Change-Id: I35cc5608a71fa410dc00f23e73ada02550160eef
Signed-off-by: guoyf2 <guoyf2@mt.com>
Reviewed-on: https://gerrit.mot.com/2341919
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Yunfei Guo <guoyf2@motorola.com>
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
@@ -57,8 +57,7 @@ CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_devonn_s5kjn1_mipi_raw mot_devonn_hi1634q_mi
 CONFIG_MTK_FLASHLIGHT_AW36515=m
 CONFIG_HQ_CAMERA_LDO=m
 # CONFIG_RT4831A_I2C is not set
-CONFIG_SND_SMARTPA_AW883XX=m
-CONFIG_SND_SMARTPA_AW883XX_I2S3=y
+# CONFIG_SND_SMARTPA_AW883XX_I2S3 is not set
 # CONFIG_SND_SMARTPA_AW882XX is not set
 # CONFIG_SND_I2S1 is not set
 CONFIG_TYPEC_FSA4480=m
@@ -87,3 +86,7 @@ CONFIG_MOT_DEVONN_CAMERA_PROJECT=y
 
 #add for i2c tool
 CONFIG_I2C_CHARDEV=y
+
+#Add for AW87XXX
+CONFIG_SND_SOC_AW87XXX=m
+CONFIG_SND_SOC_AW87XXX_KERNEL=y
