asoc: add aw87390 driver v2.7.0
changes:
add aw87390 driver v2.7.0

Change-Id: I819b6f2c008b37b98036a912a5adb230013a492a
Signed-off-by: guoyf2 <guoyf2@mt.com>
Reviewed-on: https://gerrit.mot.com/2341929
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Yunfei Guo <guoyf2@motorola.com>
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -1940,4 +1940,11 @@ config TYPEC_FSA4480
 	tristate "fsa4480 for typec analog headset"
 	depends on I2C
 
+config SND_SOC_AW87XXX_KERNEL
+	tristate "SoC Audio for awinic AW87XXX Smart K PA"
+	depends on I2C
+	help
+	  This option enables support for AW87XXX Smart K PA.
+
+source "sound/soc/codecs/aw87390/Kconfig"
 endmenu
