--- a/sound/soc/codecs/Makefile
+++ b/sound/soc/codecs/Makefile
@@ -647,3 +647,4 @@ obj-$(CONFIG_SND_SOC_MAX98504)	+= snd-soc-max98504.o
 obj-$(CONFIG_SND_SOC_SIMPLE_AMPLIFIER)	+= snd-soc-simple-amplifier.o
 obj-$(CONFIG_SND_SOC_TPA6130A2)	+= snd-soc-tpa6130a2.o
 obj-$(CONFIG_SND_SMARTPA_AW883XX) += aw883xx/
+obj-$(CONFIG_SND_SOC_AW87XXX) += aw87390/
