devonn:  Increase the speed of I2C bus
devonn:
--Increasing the I2C bus speed is used to improve the camera startup Kpi

Change-Id: I86d2d303f827f4acc48226d012b12f24b616b500
Signed-off-by: wangzl37 <wangzl37@motorola.com>
Reviewed-on: https://gerrit.mot.com/2343122
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: <wuyh23@motorola.com>
Reviewed-by: Darong Huang <huangdra@motorola.com>
Reviewed-by: Pengfei Qiao <qiaopf1@motorola.com>
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855_devonn_camera_overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855_devonn_camera_overlay.dtsi
@@ -451,7 +451,7 @@
 /* CAMERA EEPROM */
 &i2c2 {
 	status = "okay";
-	clock-frequency = <400000>;
+	clock-frequency = <1000000>;
 	#address-cells = <1>;
 	size-cells = <0>;
 
@@ -475,7 +475,7 @@
 };
 &i2c4 {
 	status = "okay";
-	clock-frequency = <400000>;
+	clock-frequency = <1000000>;
 	#address-cells = <1>;
 	#size-cells = <0>;
 
@@ -484,13 +484,7 @@
 		reg = <0x51>;
 		status = "okay";
 	};
-#if 0
-	mtk_camera_eeprom4:camera_eeprom4@50 {
-		compatible = "mediatek,camera_eeprom";
-		reg = <0x50>;
-		status = "okay";
-	};
-#endif
+
 	camera_sub_mtk:camera_sub@1a {
 		compatible = "mediatek,camera_sub";
 		#thermal-sensor-cells = <0>;
