--- a/arch/arm64/boot/dts/mediatek/devonf-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonf-display.dtsi
@@ -27,21 +27,32 @@
 		aw99703,hwen-gpio = <&pio 8 1>;
 		aw99703,bl-map = <3>; /* brightness map level 1:256,2:1024,3:2048 */
 		aw99703,using-lsb;
-		aw99703,ovp-level = <2>; /* 31V */
-		aw99703,ocp-level = <1>; /* 1.8A */
+		aw99703,ovp-level = <2>; /* 0:17.5V, 1:24V, 2:31V, 3:38V, 4:41.5V */
+		aw99703,ocp-level = <1>; /* 0:0.9A, 1:1.8A, 2:2.7A, 3:3.4A */
 		aw99703,switch-freq = <1>; /* 1000kHz(default) */
 		aw99703,auto-freq-high = <0x10>;
 		aw99703,auto-freq-low = <0x05>;
 		aw99703,bl-fscal-led = <0x15>; /* 21.6mA */
-		aw99703,bl-channel = <2>;
+		aw99703,bl-channel = <3>;
                 aw99703,turn-on-ramp = <0x00>; /* 512us */
                 aw99703,turn-off-ramp = <0x04>; /* 8ms */
 		aw99703,pwm-trans-dim = <0>; /* 2ms */
                 aw99703,i2c-trans-dim = <1>; /* 128ms */
-		aw99703,pwm-mode = <0>; /* 0 pwm enable,1 PWM disable */
-		aw99703,map-type = <1>; /* linear */
+		aw99703,pwm-mode = <1>; /* 1 pwm enable,0 PWM disable */
+		aw99703,map-type = <4>; /* 0 exponential, 4 linear */
 		aw99703,work-mode = <1>; /* backlight */
                 aw99703,default-brightness = <1810>;
+		aw99703,init-seq-enable = <1>;
+		aw99703,init-seq = <0x02 0x04>,
+				<0x03 0xCF>,
+				<0x04 0x29>,
+				<0x09 0x00>,
+				<0x05 0x10>,
+				<0x67 0x1C>,
+				<0x25 0x61>,
+				<0x24 0x4C>,
+				<0x23 0x61>,
+				<0x02 0x05>;
 
                 ktd,hwen-gpio = <&pio 8 1>;
                 ktd,pwm-mode = <1>; /* 1 pwm enable,0 PWM disable */
