dts/arm64 :enable spi3 tee only mode
fps spi lock in tee mode:
enable spi3 tee only mode

Change-Id: Ia8af64f9bae6570c4c6a784f0b075194a4dee146
Signed-off-by: Yan Zhang <zhangy26@motorola.com>
Reviewed-on: https://gerrit.mot.com/2344476
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-fps-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-fps-overlay.dtsi
@@ -59,7 +59,7 @@
 /* FINGERPRINT start */
 &spi3 {
 	status = "okay";
-	/* tee-only;*/
+	tee-only;
 	fingerprint@0 {
 		compatible = "mediatek,fingerprint";
 		reg = <0>;
