devonf: camera bringup[7/7]
rootcause:ov50a40 hi1634q s5k4h7 bringup
solution:NA

Change-Id: I38187f6e619cde1196a7b99dc13f655031ccf26d
Signed-off-by: longc110 <longc110@motorola.com>
Reviewed-on: https://gerrit.mot.com/2344713
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Shenhuai Huang <huangsh4@motorola.com>
Reviewed-by: <wangzl37@motorola.com>
Reviewed-by: <yangmf3@motorola.com>
Reviewed-by: Pengfei Qiao <qiaopf1@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
@@ -286,6 +286,8 @@ chipone,enable-wakeup;
 //#include "mediatek/cust_mt6855_touch_1080x2400.dtsi"
 #include "mediatek/cust_mt6855_camera_v4l2.dtsi"
 
+/delete-node/ &camera_main_two_af_mtk;
+
 &sound {
 	mediatek,spk-i2s = <3 0>;
 	mediatek,speaker-codec {
