--- a/arch/arm64/boot/dts/mediatek/mt6855-moto-base.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-moto-base.dtsi
@@ -16,4 +16,5 @@
 	tboard_thermistor7: thermal-ntc7 { };
 	charge_leds: charge_leds{ };
 	moto_chg_tcmd: moto_chg_tcmd { };
+	flashlights_devonf: flashlights_devonf { };
 };
