--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
@@ -53,8 +53,9 @@ CONFIG_ZRAM_WRITEBACK=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_MOTO_WL2864C=m
 CONFIG_MTK_VIDEO_AW36515=m
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_devonn_s5kjn1_mipi_raw mot_devonn_hi1634q_mipi_raw mot_devonn_ov02b10_mipi_raw mot_devonn_gc02m1_mipi_raw"
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_devonf_ov50a_mipi_raw mot_devonf_hi1634q_mipi_raw mot_devonf_s5k4h7_mipi_raw"
 CONFIG_MTK_FLASHLIGHT_AW36515=m
+CONFIG_MTK_FLASHLIGHT_DEVONF=m
 CONFIG_HQ_CAMERA_LDO=m
 # CONFIG_RT4831A_I2C is not set
 # CONFIG_SND_SMARTPA_AW883XX_I2S3 is not set
@@ -81,13 +82,12 @@ CONFIG_SCSI_SKHID=y
 CONFIG_GATEIC_OCP2138=m
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 
-
 CONFIG_MTK_CLKBUF_NFC=y
 
 
-
-#Moto devonn Camera
-CONFIG_MOT_DEVONN_CAMERA_PROJECT=y
+#Moto devonf Camera
+# CONFIG_MOT_DEVONN_CAMERA_PROJECT is not set
+CONFIG_MOT_DEVONF_CAMERA_PROJECT=y
 
 #add for i2c tool
 CONFIG_I2C_CHARDEV=y
