devonf:sensors bringup
WHY:devonf:sensors bringup on mainline branch
HOW:fix sar sensors configs in arm64/dts

Change-Id: I33692176d6da62c4f6b7a75c7c48b1d53b9578a6
Signed-off-by: longc103 <longc103@motorola.com>
Reviewed-on: https://gerrit.mot.com/2344824
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Nan Wu <wunan3@motorola.com>
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
@@ -15,6 +15,7 @@
 #include "mediatek/devonf-display.dtsi"
 #include "mediatek/devonf-charger.dtsi"
 #include "mediatek/mt6855_devonf_camera_overlay.dtsi"
+#include "mediatek/devonf-sar.dtsi"
 #include "mediatek/devonf-audio.dtsi"
 
 &dispsys_config {
