devonf:swtp ecci config
WHY:devonf:swtp need user self micro ctrl it's functions
HOW:fix ecci driver,arm64/config

Change-Id: Iaaf471bd5f8f990e8c9bb37bd4b1a2ada19cd62e
Signed-off-by: cca <longc103@motorola.com>
Reviewed-on: https://gerrit.mot.com/2347678
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Shuxian Zhang <zhangsx1@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/misc/mediatek/eccci/Kconfig
+++ b/drivers/misc/mediatek/eccci/Kconfig
@@ -70,3 +70,12 @@ config MOTO_DEVONN_SWTP_CUST
 	  then it is supported, if no,
 	  it is disabled.
 	  The option default disabled.
+
+config MOTO_DEVONF_SWTP_CUST
+	bool "ECCCI devonf swtp customization"
+	depends on MTK_ECCCI_DRIVER
+	help
+	  This option enables devonf swtp customization, if yes,
+	  then it is supported, if no,
+	  it is disabled.
+	  The option default disabled.
