kernel:Devonf vol key event update
devonf: vol key event update
Devonf vol key event update

Change-Id: I231096c4f75510dd343933be999c7f7437aaebfb
Reviewed-on: https://gerrit.mot.com/2348936
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Reviewed-by: Jianguo Liu <liujg6@motorola.com>
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Tested-by: Jira Key
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
@@ -168,6 +168,12 @@ chipone,enable-wakeup;
 	status = "disabled";
 };
 
+&mt6363keys {
+        home {
+                linux,keycodes = <115>;
+        };
+};
+
 &i2c3 {
 	haptic_nv@5A{
 		compatible = "awinic,haptic_nv";
