[dts][devonf] Add pn557 device tree
Add pn557 device tree for devonf
Config MTK sys clk

Change-Id: I8083425e6ecdc2c343d69ba3a68210005c9b694d
Signed-off-by: panzh2 <panzh2@mt.com>
Reviewed-on: https://gerrit.mot.com/2349018
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Shengchun Li <lisc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
@@ -18,6 +18,24 @@
 #include "mediatek/devonf-sar.dtsi"
 #include "mediatek/devonf-audio.dtsi"
 
+&clock_buffer_ctrl {
+        mediatek,xo-bbck4 = <1>;
+};
+
+&i2c3 {
+        status = "okay";
+        nfc_pn5xx: nfc_pn5xx@28 {
+                compatible = "nxp,pn5xx";
+                reg = <0x28>;
+                interrupt-parent = <&pio>;
+                interrupts = <19 IRQ_TYPE_LEVEL_HIGH>;
+                nxp,pn544-irq = <&pio 2 0>;
+                nxp,pn544-ven = <&pio 161 0>;
+                nxp,pn544-fd = <&pio 1 0>;
+                status = "okay";
+        };
+};
+
 &dispsys_config {
 	pinctrl-names =
 		"lcm_rst_out1_gpio", "lcm_rst_out0_gpio",
