--- a/arch/arm64/configs/ext_config/debug-mgk_64_k510-devonf.config
+++ b/arch/arm64/configs/ext_config/debug-mgk_64_k510-devonf.config
@@ -24,6 +24,10 @@ CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_devonn_s5kjn1_mipi_raw mot_devonn_hi1634q_mi
 CONFIG_MTK_FLASHLIGHT_AW36515=m
 CONFIG_HQ_CAMERA_LDO=m
 
+
+CONFIG_MTK_CLKBUF_NFC=y
+
+
 #Moto devonn Camera
 CONFIG_MOT_DEVONN_CAMERA_PROJECT=y
 
