--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
@@ -81,6 +81,11 @@ CONFIG_SCSI_SKHID=y
 CONFIG_GATEIC_OCP2138=m
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 
+
+CONFIG_MTK_CLKBUF_NFC=y
+
+
+
 #Moto devonn Camera
 CONFIG_MOT_DEVONN_CAMERA_PROJECT=y
 
