--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
@@ -99,3 +99,7 @@ CONFIG_SND_SOC_AW87XXX_KERNEL=y
 #disable CDMA
 CONFIG_MTK_MD1_SUPPORT=22
 CONFIG_MTK_C2K_LTE_MODE=0
+
+#disable UFS HPB
+# CONFIG_UFSSHPB is not set
+# CONFIG_SCSI_UFS_HPB is not set
