Vicky: Change main camera I2C clock rate to 1MHz.
- Change I2C clock rate to 1MHz for S5KHM6.
- MerGing sequential registers into one write operation.
- Using I2C batch writing.

Change-Id: I5a41f577bb607589475dc6ecfa6eb150fa0970a6
Signed-off-by: chenglong1 <chenglong1@mt.com>
Reviewed-on: https://gerrit.mot.com/2341915
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Darong Huang <huangdra@motorola.com>
Reviewed-by: Shenhuai Huang <huangsh4@motorola.com>
Reviewed-by: <wangzl37@motorola.com>
Reviewed-by: XiaoFeng Wang <wangxf32@mt.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789_vicky_camera_overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789_vicky_camera_overlay.dtsi
@@ -307,7 +307,7 @@
 /* CAMERA EEPROM */
 &i2c2 {
 	status = "okay";
-	clock-frequency = <400000>;
+	clock-frequency = <1000000>;
 	#address-cells = <1>;
 	#size-cells = <0>;
 
