--- a/arch/arm64/boot/dts/mediatek/devonf-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonf-charger.dtsi
@@ -14,11 +14,13 @@
 &charger {
 	/* common */
 	battery_cv = <4480000>;
-	max_charger_voltage = <11000000>;
+	max_charger_voltage = <14500000>;
 	min_charger_voltage = <4600000>;
 
-	/*pe4 && pdc && pe2*/
-	fast_charging_indicator = <0x0E>;
+	/*pe5 && pdc && pe2 && wlc*/
+	fast_charging_indicator = <0x36>;
+	/*swchg + 1CP*/
+	charger_configuration= <3>;
 
 	/* charging current */
 	usb_charger_current_suspend = <0>;
@@ -37,38 +39,122 @@
 	/*mmi config*/
 	mmi,iterm-ma = <243>;
 	mmi,mmi-temp-zones = <0 4200 1000 0>,
-			<10 4250 3000 1000>,
-			<15 0 3000 3000>,
-			<45 0 4000 4000>,
+			<10 4250 2500 1000>,
+			<15 0 2500 2500>,
+			<45 4250 6000 5200>,
+			<45 4400 5200 4000>,
 			<60 4200 4000 0>;
+	mmi,mmi-ffc-zones = <0 4200 250>,
+			<10 4250 250>,
+			<15 4480 250>,
+			<25 4510 570>,
+			<35 4510 660>,
+			<45 4510 765>,
+			<60 4200 250>;
 	mmi,enable-charging-limit;
 	mmi,upper-limit-capacity = <65>;
 	mmi,lower-limit-capacity = <60>;
+	//enable_cp;
 };
+
+
+&pdc {
+	sc_input_current = <3000000>;
+};
+
+&pe2 {
+	sc_input_current = <3000000>;
+};
+
 
 &mt6375_typec {
 	pd-data {
-		/* 5V, 900ma */
+
 		pd,source-pdo-data = <0x0001905a>;
 
-		/* 9V, 2A */
 		pd,sink-pdo-size = <2>;
-		pd,sink-pdo-data = <0x0002D0C8 0x0002D0C8> ;
+		//pd,sink-pdo-data = <0x0002D0C8 0x0002D0C8> ;
+                pd,sink-pdo-data = <0x0001912c 0x0001912c> ;
 	};
 };
 
+/*
 &pdc {
 	pd_vbus_low_bound = <5000000>;
 	pd_vbus_upper_bound = <9000000>;
 
-	/* single charger */
 	sc_input_current = <3000000>;
 	sc_charger_current = <4000000>;
 };
+*/
 
+/*
 &pe4 {
 	pe40_max_vbus = <6000>;
 	pe40_max_ibus = <3000>;
+};
+*/
+
+&pd_adapter{
+	ita_min = <1000>;
+};
+
+
+&pe5 {
+		compatible = "mediatek,charger,pe5";
+		gauge = <&mtk_gauge>;
+		polling_interval = <10000>;
+		ta_cv_ss_repeat_tmin = <25>;
+		vbat_cv = <4510>;
+		start_soc_min = <0>;
+		start_soc_max = <90>;
+		start_vbat_max = <4450>;
+		idvchg_term = <500>;
+		idvchg_step = <50>;
+		ita_level = <3000 2500 2000 1500>;
+		rcable_level = <350 400 500 600>;
+		ita_level_dual = <5000 3700 3400 3000>;
+		rcable_level_dual = <230 350 450 550>;
+		idvchg_ss_init = <1000>;
+		idvchg_ss_step = <250>;
+		idvchg_ss_step1 = <100>;
+		idvchg_ss_step2 = <50>;
+		idvchg_ss_step1_vbat = <4000>;
+		idvchg_ss_step2_vbat = <4200>;
+		ta_blanking = <400>;
+		swchg_aicr = <0>;
+		swchg_ichg = <1200>;
+		swchg_aicr_ss_init = <400>;
+		swchg_aicr_ss_step = <200>;
+		swchg_off_vbat = <4250>;
+		force_ta_cv_vbat = <4250>;
+		chg_time_max = <10800>;
+		tta_level_def = <0 0 0 0 25 50 60 70 80>;
+		tta_curlmt = <0 0 0 0 0 0 0 0 0>;
+		tta_recovery_area = <3>;
+		tbat_level_def = <0 0 0 5 25 40 43 46 50>;
+		tbat_curlmt = <0 0 0 0 0 0 0 0 0>;
+		tbat_recovery_area = <3>;
+		tdvchg_level_def = <0 0 0 5 25 55 60 65 70>;
+		tdvchg_curlmt = <0 0 0 0 0 0 0 0 0>;
+		tdvchg_recovery_area = <3>;
+		tswchg_level_def = <0 0 0 5 25 65 70 75 80>;
+		tswchg_curlmt = <0 0 0 0 0 0 0 0 0>;
+		tswchg_recovery_area = <3>;
+		ifod_threshold = <200>;
+		rsw_min = <20>;
+		ircmp_rbat = <40>;
+		ircmp_vclamp = <0>;
+		vta_cap_min = <6800>;
+		vta_cap_max = <11000>;
+		ita_cap_min = <1000>;
+		support_ta = "pca_ta_pps", "pd_adapter";
+		allow_not_check_ta_status;
+		vbat_threshold = <4150>;
+		mmi_therm_cur_thres = <500>;
+		mmi_therm_vol_thres = <80>;
+		mmi_therm_step = <3>;
+		mmi_max_ibat = <6000>;
 };
 
 &mtk_gauge {
@@ -119,6 +205,158 @@
 	df-serialnum = "SB18D39674";
 	#include "bat_setting/mt6879_battery_nf50_atl_5000mah.dtsi"
 };
+
+/*
+&pio {
+	bq2597x_int_default: bq2597x_int_default {
+		pinmux = <PINMUX_GPIO2__FUNC_GPIO2>;
+		slew-rate= <0>;
+		bias-disable;
+	};
+};
+*/
+
+/*
+&odm {
+	mmi_chrg_manager {
+		compatible = "mmi,chrg-manager";
+		mmi,pps-volt-steps = <20000>;
+		mmi,pps-curr-steps = <100000>;
+		mmi,pd-volt-max = <10000000>;
+		mmi,pd-curr-max = <3000000>;
+		mmi,batt-curr-boost = <300000>;
+		mmi,batt-ovp-lmt = <4550000>;
+		mmi,pl-chrg-vbatt-min = <3600000>;
+		mmi,typec-middle-current = <1500000>;
+		mmi,step-first-current-comp = <0>;
+		mmi,dont-rerun-aicl;
+		mmi,chrg-temp-zones-num = <5>;
+		mmi,mmi-chrg-temp-zones =
+					<0 4200 1000  0 0>,
+					<10 4200 2500 4450 1000>,
+					<15 4450 2500 0 0>,
+					<45 4250 5800 4450 4000>,
+					<60 4200 3600 0 0>;
+		mmi,thermal-mitigation =
+					<5800000>,
+					<5000000>,
+					<4000000>,
+					<3000000>,
+					<2000000>;
+		charger_device_0 {
+			chrg-name = "pmic-sw";
+			psy-name = "battery";
+			charging-curr-limited = <1000000>;
+		};
+		charger_device_1 {
+			chrg-name = "cp-master";
+			psy-name = "bq2597x-standalone";
+			charging-curr-min = <2000000>;
+		};
+	};
+};
+*/
+
+/*
+&i2c9 {
+        status = "okay";
+
+        bq2597x-standalone@66 {
+                compatible = "ti,bq2597x-standalone";
+                reg = <0x66>;
+
+                /delete-property/ interrupts;
+                interrupt-parent = <&pio>;
+                interrupts = <2 IRQ_TYPE_EDGE_FALLING 2 0>;
+                interrupt-names = "bq2597x_irq";
+                pinctrl-names = "default";
+                pinctrl-0 = <&bq2597x_int_default>;
+                ti,bq2597x,bat-ovp-disable;
+                ti,bq2597x,bat-ovp-alarm-disable;
+                ti,bq2597x,bat-ucp-alarm-disable;
+                ti,bq2597x,bat-ocp-disable;
+                ti,bq2597x,bat-ocp-alarm-disable;
+
+                ti,bq2597x,bat-ucp-disable;
+
+                ti,bq2597x,bus-ovp-alarm-disable;
+                ti,bq2597x,bus-ocp-disable;
+                ti,bq2597x,bus-ocp-alarm-disable;
+
+
+                ti,bq2597x,bat-therm-disable;
+                ti,bq2597x,bus-therm-disable;
+                ti,bq2597x,die-therm-disable;
+
+                ti,bq2597x,bat-ovp-threshold = <4575>;
+                ti,bq2597x,bat-ovp-alarm-threshold = <4450>;
+                ti,bq2597x,bat-ocp-threshold = <8000>;
+                ti,bq2597x,bat-ocp-alarm-threshold = <6500>;
+
+                ti,bq2597x,bus-ovp-threshold = <12000>;
+                ti,bq2597x,bus-ovp-alarm-threshold = <11000>;
+                ti,bq2597x,bus-ocp-threshold = <3750>;
+                ti,bq2597x,bus-ocp-alarm-threshold = <3500>;
+
+                ti,bq2597x,bat-ucp-alarm-threshold = <2000>;
+
+                ti,bq2597x,bat-therm-threshold = <0x15>;
+                ti,bq2597x,bus-therm-threshold = <0x15>;
+                ti,bq2597x,die-therm-threshold = <125>;
+
+                ti,bq2597x,ac-ovp-threshold = <17>;
+                ti,bq2597x,sense-resistor-mohm = <5>;
+
+        };
+};
+*/
+/*
+&pio {
+	bq25960_int_default: bq25960_int_default {
+		pinmux = <PINMUX_GPIO164__FUNC_GPIO164>;
+		slew-rate= <0>;
+		input-enable;
+		bias-pull-up;
+	};
+};
+
+&i2c9 {
+	status = "okay";
+
+	bq25960-standalone@66 {
+		compatible = "ti,bq25960-standalone";
+		reg = <0x66>;
+
+		interrupt-parent = <&pio>;
+		interrupts = <164 IRQ_TYPE_EDGE_FALLING 164 0>;
+		interrupt-names = "bq25960_irq";
+		pinctrl-names = "default";
+		pinctrl-0 = <&bq25960_int_default>;
+	};
+};
+*/
+
+&i2c9 {
+       status = "okay";
+       sc8551-charger@66{
+               compatible = "sc,sc8551-standalone";
+               reg = <0x66>;
+               sc,sc8551,irq-gpio = <&pio 46 0>;
+               /*sc,sc8551,bat-ovp-disable = <0>;
+               sc,sc8551,bat-ocp_disable = <0>;
+               sc,sc8551,bus-ocp-disable = <0>;*/
+
+               sc,sc8551,bat-ovp-threshold = <4525>;
+               sc,sc8551,bat-ocp-threshold = <8000>;
+
+               sc,sc8551,bus-ovp-threshold = <12000>;
+               sc,sc8551,bus-ocp-threshold = <3750>;
+
+               sc,sc8551,ac-ovp-threshold = <12000>;
+               sc,sc8551,sense-resistor-mohm = <5>;
+       };
+};
+
 
 &charge_leds {
 	compatible = "gpio-leds";
