--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
@@ -1202,15 +1202,74 @@
 			thermal-sensors = <&tboard_thermistor4>;
 		};
 		quiet_thermal: quiet_thermal {
-			polling-delay = <0>; /* milliseconds */
-			polling-delay-passive = <0>; /* milliseconds */
-			thermal-sensors = <&tboard_thermistor5>;
+		        polling-delay = <5000>; /* milliseconds */
+		        polling-delay-passive = <1000>; /* milliseconds */
+		        thermal-sensors = <&tboard_thermistor5>;
+		        trips {
+			    charge_trip0: charge-trip0 {
+			    temperature = <40000>;
+			    hysteresis = <3000>;
+			    type = "passive";
+			};
+			charge_trip1: charge-trip1 {
+			    temperature = <43000>;
+			    hysteresis = <3000>;
+			    type = "passive";
+			};
+			charge_trip2: charge-trip2 {
+			    temperature = <44000>;
+			    hysteresis = <3000>;
+			    type = "passive";
+			};
+			charge_trip3: charge-trip3 {
+			    temperature = <45000>;
+			    hysteresis = <3000>;
+			    type = "passive";
+			};
+			charge_trip4: charge-trip4 {
+			    temperature = <46000>;
+			    hysteresis = <3500>;
+			    type = "passive";
+			};
+			charge_trip5: charge-trip5 {
+			    temperature = <47000>;
+			    hysteresis = <4000>;
+			    type = "passive";
+			};
+		    };
+
+		    cooling-maps {
+			charge-cdev0 {
+			    trip = <&charge_trip0>;
+			    cooling-device = <&charger_cooler 2 2>;
+			};
+			charge-cdev1 {
+			    trip = <&charge_trip1>;
+			    cooling-device = <&charger_cooler 3 3>;
+			};
+			charge-cdev2 {
+			    trip = <&charge_trip2>;
+			    cooling-device = <&charger_cooler 5 5>;
+			};
+			charge-cdev3 {
+			    trip = <&charge_trip3>;
+			    cooling-device = <&charger_cooler 6 6>;
+			};
+			charge-cdev4 {
+			    trip = <&charge_trip4>;
+			    cooling-device = <&charger_cooler 7 7>;
+			};
+			charge-cdev5 {
+			    trip = <&charge_trip5>;
+			    cooling-device = <&charger_cooler 8 8>;
+			};
+		    };
 		};
 };
 
 &charger_cooler {
-        mmi,thermal-mitigation = <(-1) 5500000 5000000 4000000 3000000
-                                2000000 1500000 1000000 500000>;
+        mmi,thermal-mitigation = <(-1) 5500000 5000000 4500000 4000000 3000000
+                                2000000 1000000 500000>;
 };
 
 &swtp {
