arm64/dts:add COM_FG_METER_RESISTANCE for battery ntc read temp compensation
add COM_FG_METER_RESISTANCE for battery ntc read compensation for the 
question of battery ntc read inaccurate.

Change-Id: I9b702cf70deb9a427eba9ebcb9b0c566a2d65569
Reviewed-on: https://gerrit.mot.com/2351757
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Lei Chen <chenl18@motorola.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
@@ -268,6 +268,8 @@
         charger_2nd = <&sgm41543d_charger>;
 
 	CAR_TUNE_VALUE = <(100)>;
+	COM_FG_METER_RESISTANCE = <(80)>;
+	FG_CURRENT_PN_LABEL = <(1)>;
 	DIFFERENCE_FULLOCV_ITH = <(243)>;
 	g_Q_MAX_row = <4>;
 	g_Q_MAX_col = <10>;
