--- a/arch/arm64/boot/dts/mediatek/devonn-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-touch.dtsi
@@ -34,8 +34,9 @@
 	focaltech,reset-gpio = <&pio 3 0x0>;
 	focaltech,irq-gpio = <&pio 22 0x0>;
 	focaltech,max-touch-number = <10>;
-        focaltech,display-coords = <0 0 1080 2400>;
+	focaltech,display-coords = <0 0 1080 2400>;
 	focaltech,report_gesture_key = <59>;
+	focaltech,panel-supplier = "txd","csot";
 	};
 };
 
