kernel/driver/devon:csot lcd bringup
Modify:
 Add csot_ft8726 lcd configuration

Change-Id: I435379b1d9cd44220b9893a8e21fab9dae99e2e1
Signed-off-by: wingte72 <wingte72@motorola.com>
Reviewed-on: https://gerrit.mot.com/2353967
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Dezhen Hou <houdz1@motorola.com>
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/gpu/drm/panel/Makefile
+++ b/drivers/gpu/drm/panel/Makefile
@@ -93,6 +93,7 @@ obj-$(CONFIG_DRM_PANEL_BOE_NT37701A_655_FHDP_DPHY_CMD_144HZ) += dsi-panel-mot-bo
 obj-$(CONFIG_DRM_PANEL_MOT_DUMMY_VDO_60HZ) += dsi-panel-mot-dummy-vdo-60hz.o
 obj-$(CONFIG_DRM_PANEL_TIANMA_ICNL9922_649_FHDP_DPHY_VDO_120HZ) += dsi-panel-mot-tianma-icnl9922-649-fhdp-dphy-vdo-120hz.o
 obj-$(CONFIG_DRM_PANEL_TONGXINGDA_FT8726_FHDP_DPHY_VDO_120HZ) += dsi-panel-mot-tongxingda-ft8726-fhdp-dphy-vdo-120hz.o
+obj-$(CONFIG_DRM_PANEL_CSOT_FT8726_FHDP_DPHY_VDO_120HZ) += dsi-panel-mot-csot-ft8726-fhdp-dphy-vdo-120hz.o
 obj-$(CONFIG_DRM_PANEL_TIANMA_NT36672C_649_FHDP_DPHY_VDO_120HZ) += dsi-panel-mot-tianma-nt36672c-649-fhdp-dphy-vdo-120hz.o
 
 obj-$(CONFIG_GATEIC_OCP2138) += ocp2138.o
