--- a/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
@@ -162,6 +162,20 @@
 
 	};
 
+	panel4@0 {
+		compatible = "csot,FT8726,vdo,120hz";
+		reg = <3>;
+		pm-enable-gpios = <&pio 161 0>;
+		reset-gpios = <&pio 95 0>;
+		pinctrl-names = "default";
+		port {
+			panel_in4: endpoint {
+				remote-endpoint = <&dsi_out>;
+			};
+		};
+
+	};
+
 	ports {
 		port {
 			dsi_out: endpoint {
