arm64/configs: remove unused flashlight and touch KOs
Remove CONFIG_MTK_FLASHLIGHT_AW36515
Remove MTK touch driver GT9896s GT1151

Change-Id: I5ee646a3fa9b947875c77e65df2effa8cfcc74bf
Reviewed-on: https://gerrit.mot.com/2353984
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jing Hu <hujing3@mt.com>
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
@@ -54,7 +54,6 @@ CONFIG_I2C_CHARDEV=y
 CONFIG_MOTO_WL2864C=m
 CONFIG_MTK_VIDEO_AW36515=m
 CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_devonf_ov50a_mipi_raw mot_devonf_hi1634q_mipi_raw mot_devonf_s5k4h7_mipi_raw"
-CONFIG_MTK_FLASHLIGHT_AW36515=m
 CONFIG_MTK_FLASHLIGHT_DEVONF=m
 CONFIG_HQ_CAMERA_LDO=m
 # CONFIG_RT4831A_I2C is not set
@@ -102,4 +101,6 @@ CONFIG_MTK_C2K_LTE_MODE=0
 
 #disable UFS HPB
 # CONFIG_UFSSHPB is not set
-# CONFIG_SCSI_UFS_HPB is not set
+
+#disable MTK default touch drives
+CONFIG_TOUCHSCREEN_MTK_TOUCH=""
