devonn: disable UFS HPB to save memory
According to page owner result, UFS HPB takes 250M+ RAM.
Disable UFS HPB feature to save memory.

Change-Id: I49323562f558c07249522003c1c05324ecead088
Reviewed-on: https://gerrit.mot.com/2354269
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
@@ -85,3 +85,6 @@ CONFIG_MOT_DEVONN_CAMERA_PROJECT=y
 
 #add for i2c tool
 CONFIG_I2C_CHARDEV=y
+
+# CONFIG_SCSI_UFS_HPB is not set
+# CONFIG_UFSSHPB is not set
