dts/devonf:NVT touch enable charge mode
devonf: 1st tm + NVT panel
NVT enable usb/charge mode

Change-Id: I4ca3e4ee43221bae6db78db4f57d50b79d710c45
Signed-off-by: hujing3 <hujing3@mt.com>
Reviewed-on: https://gerrit.mot.com/2355428
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonf-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonf-touch.dtsi
@@ -18,6 +18,8 @@
 		spi-max-frequency = <9600000>;	//4800000,9600000,15000000,19200000
 		novatek,reset-gpio = <&pio 3 0x00>;
 		novatek,irq-gpio = <&pio 22 0x2001>;
+		novatek,usb_charger;
+		novatek,psy-name = "battery";
 
 		// 525
 		//novatek,swrst-n8-addr = <0x01F01A>;
